--- a/ui-kit-showcase/src/main/resources/index.html
+++ b/ui-kit-showcase/src/main/resources/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>linked-planet UIKit Showcase</title>
+    <title>ui-kit showcase</title>
 </head>
 <body>
 <script src="ui-kit-showcase.js"></script>
