Upgrading to kotlin 1.5.31, adding all initial imports

--- a/ui-kit-showcase/src/main/resources/index.html
+++ b/ui-kit-showcase/src/main/resources/index.html
@@ -5,7 +5,7 @@
     <title>ui-kit showcase</title>
 </head>
 <body>
-<script src="ui-kit-showcase.js"></script>
+<script src="frontend/ui-kit-showcase.js"></script>
 <div id="root"></div>
 </body>
 </html>
