Corrected path of showcase frontend sources

--- a/ui-kit-showcase/src/main/resources/index.html
+++ b/ui-kit-showcase/src/main/resources/index.html
@@ -22,7 +22,7 @@
     <title>UI-KIT Showcase</title>
 </head>
 <body>
-<script src="frontend/ui-kit-showcase.js"></script>
+<script src="ui-kit-showcase.js"></script>
 <div id="root"></div>
 </body>
 </html>
