Corrected naming of UI-Kit and added link to showcase

--- a/ui-kit-showcase/src/main/resources/index.html
+++ b/ui-kit-showcase/src/main/resources/index.html
@@ -19,7 +19,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>UI-KIT Showcase</title>
+    <title>UI-Kit Showcase</title>
 </head>
 <body>
 <script src="ui-kit-showcase.js"></script>
