--- a/ui-kit-showcase/src/main/resources/index.html
+++ b/ui-kit-showcase/src/main/resources/index.html
@@ -20,6 +20,8 @@
 <head>
     <meta charset="UTF-8">
     <title>UI-Kit Showcase</title>
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 <body>
 <script src="ui-kit-showcase.js"></script>
